@@ -654,7 +654,14 @@ The regexp must match the whole value:
 
   replace => ( 'foo.*' => 'better_foo' }
   
-In this case, a value will be replaced by C<better_foo> if the C</^foo.*$/> regexp matches. 
+In this case, a value will be replaced by C<better_foo> if the 
+C</^foo.*$/> regexp matches. 
+
+=item replace_follow
+
+Path specifying a hash of value element in the configuration tree. The 
+hash if used in a way similar to the C<replace> parameter. In this case, the 
+replacement is not coded in the model but specified by the configuration.
 
 =item refer_to
 
@@ -688,7 +695,7 @@ my @warp_accessible_params =  qw/min max mandatory default
 
 my @accessible_params =  (@warp_accessible_params, 
 			  qw/index_value element_name value_type
-			     refer_to computed_refer_to/ ) ;
+			     refer_to computed_refer_to replace_follow/ ) ;
 
 my @allowed_warp_params = (@warp_accessible_params, qw/level experience help/);
 
@@ -783,7 +790,7 @@ sub set_properties {
 
 
     map { $self->{$_} =  delete $args{$_} if defined $args{$_} }
-      qw/min max mandatory replace warn/ ;
+      qw/min max mandatory replace warn replace_follow/ ;
 
     $self->set_help           ( \%args );
     $self->set_value_type     ( \%args );
@@ -1597,6 +1604,13 @@ sub pre_store {
                 }
             }
         }
+    }
+    
+    if (defined $self->{replace_follow}) {
+        my $rep = $self->grab_value(
+            step => $self->{replace_follow}.qq!:"$value"!,
+        );                
+        $value = $rep if defined $rep ;
     }
 
     my $ok = $self->store_check($value) ;
