@@ -1,3 +1,7 @@
+	* value: added replace_follow parameter to specify automatic
+	  replacement based on a hash somewhere in the configuration
+	   tree
+
 2011-03-01 Dominique Dumont  <domi.dumont@free.fr> 1.235
     
     * Application changes:
